100-workloads/cloudycode-uat/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudycode-uat-ingress
  namespace: cloudycode-uat
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - uat.172.16.16.101.sslip.io
      secretName: uat-cloudycode-tls
  rules:
    - host: uat.172.16.16.101.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudycode-uat-svc
                port:
                  number: 80
